--- a/css/custom.css
+++ b/css/custom.css
@@ -89,3 +89,133 @@ body p {
 .dropdown-menu>.disabled>a,.dropdown-menu>.disabled>a:hover,.dropdown-menu>.disabled>a:focus{
     color:#bbbbbb
 }
+
+/* --------------------SAMPLE CODE--------------------------*/
+/* Sample code areas */
+@media(min-width:768px) {
+    .codesample-left {
+        width: 75%;
+        margin: 2em auto 1em 0;
+    }
+    .codesample-right {
+        float: left;
+        width: 75%;
+        padding-left: 1em;
+    }
+    .codesample-arrow {
+        float: left;
+        width: 25%;
+        background-image: url(arrow.png);
+        background-size: 100%;
+        background-repeat: no-repeat;
+        height: 320px;
+    }
+    .codesample-bottom:after {
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+    }
+}
+/* Sample titles */
+.code-title {
+    font-size: 13px;
+    font-weight: 700;
+    color: #959595;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding-left: 2em;
+    line-height: 2em;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* --------------------FOOTER--------------------------*/
+body > .container {
+    padding-bottom: 65px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+    padding: 10px 0;
+}
+.footer p {
+    margin: 0;
+    color: #777;
+    text-align: center;
+}
+
+/* --------------------TWITTER WIDGET--------------------------*/
+#twitter-wrapper {
+    display: none;
+}
+#twitter-wrapper.affix {
+    position: fixed;
+    top: 2px;
+}
+@media(min-width:768px) {
+    #twitter-wrapper {
+        display: block;
+        width: 187.5px;
+    }
+}
+@media(min-width:992px) {
+    #twitter-wrapper {
+        display: block;
+        width: 242.5px;
+    }
+}
+@media(min-width:1200px) {
+    #twitter-wrapper {
+        display: block;
+        width: 292.5px;
+    }
+}
+
+/* --------------------NEWS TABLE--------------------------*/
+.date {
+    width: 10px;
+    vertical-align: top;
+    padding-bottom: 10px;
+}
+
+.news {
+    width: 250px;
+    vertical-align: top;
+    padding-bottom: 10px;
+}
+
+/* --------------------MISCELLANEOUS--------------------------*/
+/* iframe */
+iframe {
+    margin: 0 auto;
+    display: block;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+.video-container iframe, .video-container object, .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+tt {
+    background-color: #f3f3f3;
+}
