--- a/css/custom.css
+++ b/css/custom.css
@@ -98,6 +98,7 @@ body p {
 	background-color:rgba(87, 6, 140, 0.2);
 	border-radius:3px;
     font-size: 1.2em;
+    max-width: fit-content;
 }
 
 .breadcrumb>li{
