--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-@import url('../webfonts/Montserrat');
+@import url('../webfonts/Montserrat/Montserrat-Regular.ttf');
 
 /* change font for site */
 body {
