--- a/css/custom.css
+++ b/css/custom.css
@@ -55,9 +55,11 @@ main {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
-.nav-item .nav-link .fab, .nav-item .nav-link .fas {
-  font-size: 2em;
-  margin-right: .4em;
+@media (min-width: 768px) {
+  .nav-item .nav-link .fab, .nav-item .nav-link .fas {
+    font-size: 2em;
+    margin-right: .4em;
+  }
 }
 
 /* change background of primary buttons*/
